Fix input field dark mode colors

--- a/scss/form/input-textarea.scss
+++ b/scss/form/input-textarea.scss
@@ -1,6 +1,9 @@
 $textarea-colors: $form-colors !default;
 
 %input-textarea {
+  @extend %input;
+  box-shadow: $input-shadow-dark;
+
   // Colors
   @each $name,
   $pair in $textarea-colors {
@@ -17,8 +20,8 @@ $textarea-colors: $form-colors !default;
       }
     }
   }
+}
 
-  //     // Sizes
-  //   }
-  // }
+.input {
+  @extend %input-textarea;
 }
